Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99529

Touchpad scrolling list overshoot is buggy

XMLWordPrintable

    • Linux/X11
    • 97eaba8998 (qt/qtdeclarative/dev) e8c1db9f98 (qt/qtdeclarative/6.2) cb28c76c40 (qt/qtdeclarative/6.3) e8c1db9f98 (qt/tqtc-qtdeclarative/6.2) cb28c76c40 (qt/tqtc-qtdeclarative/6.3) 97eaba8998 (qt/tqtc-qtdeclarative/dev) e8c1db9f98 (qt/qtdeclarative/6.2.3)

      I've just done a first evaluation with Qt 6 (6.2.2) and was thrilled to see that https://bugreports.qt.io/browse/QTBUG-56075 is fixed, well, or at least improved a lot.

      However, it still doesn't really feel as good, especially on short lists and I've noticed that this seems to be the fault of the overshoot feature:

      While the scrolling with the two fingers on a touchpad itself seems to be fixed (as in, it doesn't scroll at full speed on a single "wheel click" as it used to be), the overshooting still seems to show the old behavior.

      To reproduce, create a Flickable where contentHeight is 1.5 * the height, then use a touchpad (Linux/X11 at least, not sure about others) to scroll it at low-medium speed. Once it reaches the end, the overshoot causes a big and fast jump and then pulls it back, as it you would have hit the edge at full speed.

      This makes it still very odd to use with a touchpad.

        1. flickable.qml
          0.4 kB
        2. QTBUG-99529_after.gif
          QTBUG-99529_after.gif
          1017 kB
        3. QTBUG-99529_before.gif
          QTBUG-99529_before.gif
          999 kB
        For Gerrit Dashboard: QTBUG-99529
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            mzanetti1 mzanetti1
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes